--- a/resources/icons/USSpanels/Panels/README
+++ b/resources/icons/USSpanels/Panels/README
@@ -1,1 +1,2 @@
-   US&S Artwork based on images from Mike Burgett of Control Train Components.   These files were contributed by Dick Bronson.
+   US&S Artwork based on images from Mike Burgett of Control Train Components.
+   These files were contributed by Dick Bronson.
