*** empty log message ***

--- a/apps/AppsBundle_de.properties
+++ b/apps/AppsBundle_de.properties
@@ -1,17 +1,18 @@
 # AppsBundle_de.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 # by Simon Ginsburg
 # German properties for the apps package of jmri.
+
 
 # general menu items
 MenuFile     = Datei
 MenuItemQuit = Beenden
 
 MenuEdit     = Bearbeiten
-#!MenuItemCut         = Cut
-#!MenuItemCopy        = Copy
-#!MenuItemPaste       = Paste
+MenuItemCut         = Loeschen
+MenuItemCopy        = Kopieren
+MenuItemPaste       = Einfuegen
 MenuItemPreferences = Voreinstellungen...
 
 MenuTools    = Werkzeuge
@@ -19,11 +20,18 @@ MenuRoster   = Lokpark
 
 ButtonQuit = Beenden
 
+PrintTable	= Tabelle drucken
+PreviewTable	= Tabellendruck Vorschau
+
 # general messages
-MsgOpsButtonDisabled = Dieser Knopf funktioniert nicht da die von Ihnen verwendete \
+MsgOpsButtonDisabled = Dieser Knopf ist deaktiviert da die von Ihnen verwendete \
                        Zentraleinheit das Programmieren auf der Strecke nicht \
                        unterstuetzt oder dieses Programm die entsprechenden Funktionen\
                        für diese Zentraleinheit noch nicht besitzt
+MsgServiceButtonDisabled = Dieser Knopf ist deaktiviert da die verwendete Zentraleinheit \ 
+                           die Programmierung auf dem Programmiergleis nicht unterstuetzt \
+                           oder dieses Programm die entsprechenden Funktionen\
+                           für diese Zentraleinheit noch nicht besitzt
 
 # DecoderPro menus
 DpMenuItemUseProgrammingTrack = Decoderprogrammierung auf dem Programmiergleis ...
