--- a/jmri/jmrit/JmritToolsBundle_de.properties
+++ b/jmri/jmrit/JmritToolsBundle_de.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_de.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit Tools menu
 
@@ -13,8 +13,12 @@ MenuItemDecoderProOpsModeProgrammer = Decoderprogrammierung auf der Hauptstrecke
 MenuItemTurnoutControl = Weichensteuerung
 MenuItemTurnoutTable = Weichentabelle
 MenuItemSensorTable = Sensorentabelle
+MenuItemLightTable = Lichttabelle
 MenuItemSignalTable = Signaltabelle
+MenuItemReporterTable = Meldertabelle
+MenuItemMemoryTable = Speichertabelle
 MenuItemSimpleSignal = Einfache Signallogik
+MenuItemRouteTable = Weichenstrassentabelle
 
 MenuThrottles = Handregler
 MenuItemNewThrottle = Neuer Handregler...
@@ -25,6 +29,14 @@ MenuItemEditThrottlePreferences = Bearbeite Handregler Einstellungen
 MenuItemPowerControl = Hauptschalter
 MenuItemSpeedometer = Geschwindigkeitsmesser
 
+MenuItemConsistTool = Mehrfachtraktionswerkzeug
+
 MenuItemSendDCCPacket = Versenden eines einzelnen DCC Pakets
+
+MenuClocks = Uhren
+MenuItemNixieClock = Nixie Uhr
+MenuItemSetupClock = Einstellungen Spieluhr
+MenuItemAnalogClock = Analoguhr
+
 
 
