--- a/jmri/jmrit/display/DisplayBundle_de.properties
+++ b/jmri/jmrit/display/DisplayBundle_de.properties
@@ -1,13 +1,42 @@
 # DisplayBundle_de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmrit.display package
 
 
 # menu items
-MenuPanels    = Tafel
-MenuItemNew   = Neue Tafel...
-MenuItemLoad  = Lade Tafel...
-MenuItemStore = Speichere Tafel...
+MenuPanels    = Gleisstellbild
+MenuItemNew   = Neues Gleisstellbild...
+MenuItemLoad  = Lade Gleisstellbild...
+MenuItemStore = Speichere Gleisstellbild...
 
+# menu items
+MenuPanels    = Gleisstellbilder
+MenuEdit      = Bearbeiten
+MenuFile      = Speichern
+
+MenuItemNew   = Neues Gleisstellbild...
+MenuItemLoad  = Gleisstellbild laden...
+MenuItemStore = Gleisstellbild speichern...
+
+MenuItemScript = Ablaufprogramm starten...
+
+MenuItemMonitor = Ablauf Monitor
+MenuItemScriptLog = Ablaufprogramm Ausgabe
+MenuItemScriptInput = Ablaufprogramm Eingabe
+
+# labels, etc
+ButtonAddBkg        = Waehle Hintergrundbild...
+ButtonAddText       = Waehle Text:
+ButtonAddIcon       = Waehle Sinnbild:
+ButtonAddSensor     = Waehle Sensor:
+ButtonAddRHTurnout  = Waehle rechte Weiche:
+ButtonAddLHTurnout  = Waehle linke Weiche:
+ButtonAddSignal     = Waehle Signal:
+ButtonAddFastClock  = Waehle Spieluhr:
+
+CheckBoxEditable    = Gleisstellbildelementespezifische Menus aktiv
+CheckBoxPositionable = Gleisstellbildelemente sind verschiebbar
+CheckBoxControlling = Gleisstellbildelemente beeinflussen Anlage
+CheckBoxMenuBar     = Gleisstellbild hat Menu
