--- a/jmri/jmrit/roster/JmritRosterBundle_de.properties
+++ b/jmri/jmrit/roster/JmritRosterBundle_de.properties
@@ -1,6 +1,6 @@
 # JmritRosterBundle_de.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit.roster package
 
@@ -9,6 +9,7 @@ MenuItemExport  = Exportieren ...
 MenuItemCopy    = Kopieren ...
 MenuItemDelete  = Loeschen ...
 MenuItemPrint   = Drucken ...
+MenuItemPreview = Druckvorschau ...
 
 FieldID             = ID:
 FieldRoadName       = Name der Bahngesellschaft:
@@ -26,6 +27,7 @@ FieldFilename       = Dateiname:
 ToolTipID = Identifiziert diese Lokomotive in im Lokpark
 
 ToolTipDccAddress = Dieses Feld wird vom Programm automatisch aktualisiert
+ToolTipShortLong = Dieses Feld wird vom Programm automatisch aktualisiert
 ToolTipDecoderModel = Dieses Feld wurde durch eine fruehere Auswahl gefuellt
 ToolTipDecoderFamily = Dieses Feld wurde durch eine fruehere Auswahl gefuellt
 ToolTipFilename = Dieses Feld wird vom Programm automatisch aktualisiert
