--- a/jmri/jmrix/JmrixSystemsBundle_de.properties
+++ b/jmri/jmrix/JmrixSystemsBundle_de.properties
@@ -1,6 +1,6 @@
 # JmrixSystemsBundle_de.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix Systems menu
 
@@ -15,9 +15,15 @@ MenuItemCMRI = CMRI
 MenuItemEasyDCC = EasyDCC
 MenuItemLocoNet = LocoNet
 MenuItemNCE = NCE
-MenuItemXPressNet = XPressNet
 MenuItemSPROG = SPROG
+MenuItemWangrow = Wangrow
+MenuItemXPressNet = XPressNet
+MenuItemXPA = XPA
 MenuItemZimo = Zimo serial
+MenuItemDirect = DirectDrive
+MenuItemTMCC = TMCC (Lionel)
+MenuItemOakTree = Oak Tree
 
 MenuItemCommandMonitor = Befehlsmonitor
 MenuItemSendCommand = Sende Befehl
+MenuItemFirmwareUpdate = Firmware Aktualisierung
