--- a/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle_de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.loconet menu
 
@@ -13,5 +13,13 @@ MenuItemLocoIOProgrammer    = LocoIO Konfigurator
 MenuItemPM4Programmer       = PM4 Konfigurator
 MenuItemBDL16Programmer     = BDL16 Konfigurator
 MenuItemSE8cProgrammer      = SE8c Konfigurator
+MenuItemDS64Programmer      = DS64 Konfigurator
 MenuItemThrottleMessages    = Meldungen der Handregler
+MenuItemClockMon            = Uhr Monitor
 MenuItemStartLocoNetServer  = Starte LocoNet Server
+MenuItemLocoNetOverTCPServer = LocoNetOverTCP Server
+MenuItemLocoBufferStats     = LocoBuffer Statistik Monitor
+MenuItemCmdStnConfig        = Zentraleinheitskonfigurator
+MenuItemDownload            = Firmware einspielen
+MenuItemSoundload           = Geraeusche einspielen
+MenuItemSetID               = LocoNet ID einstellen
