--- a/jmri/NamedBeanBundle_de.properties
+++ b/jmri/NamedBeanBundle_de.properties
@@ -1,11 +1,14 @@
 # NamedBeanBundle_de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties decribing states of the various types of NamedBeans
 
 BeanStateInconsistent = Unstimmig
 BeanStateUnknown = Unbekannt
+
+LightStateOff = Aus
+LightStateOn = Ein
 
 TurnoutStateClosed = Abzweigung
 TurnoutStateThrown = Geradeaus
