--- a/jmri/jmrit/JmritDebugBundle_de.properties
+++ b/jmri/jmrit/JmritDebugBundle_de.properties
@@ -1,6 +1,6 @@
 # JmritDebugBundle_de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit Debug menu
 
@@ -10,6 +10,7 @@ MenuItemMemoryUsageMonitor      = Speicherbedarfsanzeige
 MenuItemRecreateDecoderIndex    = Decoder Index wiederherstellen
 MenuItemRecreateRoster          = Lokpark Index wiederherstellen
 MenuItemCheckXMLFile            = Pruefung einer XML Datei
+MenuItemValidateXMLFile         = Verifizierung einer XML Datei
 MenuItemCheckDecoderNames       = Pruefung des Decoderdefinition
 MenuItemCheckProgrammerNames    = Pruefung einer Programmieroberflaeche
 
