--- a/jmri/jmrix/lenz/XNetBundle_de.properties
+++ b/jmri/jmrix/lenz/XNetBundle_de.properties
@@ -1,6 +1,6 @@
 # XNetBundle_de.properties
 #
-# Revision $Revision: 2.1 $
+# Revision $Revision: 2.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.xpressnet menu
 
@@ -9,6 +9,8 @@ MenuXPressNet    = XPressNet
 MenuItemXNetCommandMonitor      = XPressNet Monitor
 MenuItemSendXNetCommand              = Sende XPressnet Befehl
 MenuItemLI101ConfigurationManager  = LI101 Konfigurator
+MenuItemCSDatabaseManager  = Zentraleinheit Datenbank Manager
+MenuItemLZ100ConfigurationManager  = LZ100 Konfigurator
 MenuItemLZV100ConfigurationManager  = LZV100 Konfigurator
 MenuItemLV102ConfigurationManager  = LV102 Konfigurator
 MenuItemXNetSystemInformation  = XPressNet System Informationen
