--- a/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_de.properties
+++ b/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_de.properties
@@ -1,61 +1,61 @@
 # NodeConfigBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.oaktree.nodeconfig window
 
-WindowTitle    = Configure Nodes
+WindowTitle    = Knotenkonfigurator
 
-BoxLabelNotes  = Notes
+BoxLabelNotes  = Bemerkungen
 
-LabelCardSize       = Card Size:
-LabelNodeAddress    = Node Address:
-LabelNodeType       = Node Type:
+LabelCardSize       = Kartengroesse:
+LabelNodeAddress    = Knotenadresse:
+LabelNodeType       = Knotentyp:
 
-TipNodeAddress      = Enter node address, numbering from 0.
-TipNodeType         = Select type of node.
-TipAddButton        = Add a new node
-TipEditButton       = Edit an existing node
-TipDeleteButton     = Delete an existing node
-TipDoneButton       = Select when done configuring nodes
-TipUpdateButton     = Change node information
-TipCancelButton     = Stop edit without changing node
+TipNodeAddress      = Eingabe der Kontenadresse, beginnend bei 0
+TipNodeType         = Waehle Knotentyp.
+TipAddButton        = Ergaenze neuen Knoten
+TipEditButton       = Bearbeite bestehenden Knoten
+TipDeleteButton     = Loesche bestehenden Knoten
+TipDoneButton       = Waehle wenn Knotenkonfiguration abgeschlossen
+TipUpdateButton     = Aendere Knoteninformation
+TipCancelButton     = Breche Bearbeiten ab
 
-ButtonAdd           = Add Node
-ButtonEdit          = Edit Node
-ButtonDelete        = Delete Node
-ButtonDone          = Done
-ButtonUpdate        = Update Node
-ButtonCancel        = Cancel 
+ButtonAdd           = Knoten hinzufuegen
+ButtonEdit          = Knoten bearbeiten
+ButtonDelete        = Knoten loeschen
+ButtonDone          = Beenden
+ButtonUpdate        = Knoten aktualisieren
+ButtonCancel        = Abbrechen
 
 # The longest of the next three lines determines the window width.
-NotesStd1   = To Add a new node, enter information and select 'Add Node'.
-NotesStd2   = To Edit a node, enter node address, then select 'Edit Node'.
-NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'.
+NotesStd1   = Zur Erzeugung eines Knotens Parameter eingeben und 'Ergaenze neuen Knoten' klicken.
+NotesStd2   = Zur Bearbeitung eines bestehenden Knotens seine Adresse eingeben und 'Knoten bearbeiten' klicken.
+NotesStd3   = Zum Loeschen eines Knotens seine Adresse eingeben und 'Knoten loeschen' klicken.
 # These three lines must be shorter than the longest line above.
-NotesEdit1  = Please check Node Address before making changes.
-NotesEdit2  = To change this node, make changes, then select 'Update Node'.
-NotesEdit3  = To leave Edit without changing this node, select 'Cancel'.
+NotesEdit1  = Bitte Knotenadresse vor bearbeiten ueberpruefen.
+NotesEdit2  = Um diesen Knoten zu aendern, Parameter aendern und 'Knoten bearbeiten' klicken.
+NotesEdit3  = Um ohne Speichern Bearbeitung zu verlassen 'Abbrechen' klicken.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Error - Node with address '
-Error2    = ' already exists, please try again.
-Error3    = Error when creating new node. Node not added.
-Error4    = Error - No node with entered Node Address(UA), please try again.
-Error5    = Error - Bad character in Node Address (UA), please try again.
-Error6    = Error - Node Address is not between 0 and 255.
+Error1    = Fehler - Knoten auf Adresse '
+Error2    = ' existiert bereits, bitte aendern.
+Error3    = Fehler beim Erzeugen des Knotens. Knoten nicht erzeugt.
+Error4    = Fehler - Kein Knoten mit eingegebener Adresse (UA), bitte aendern.
+Error5    = Fehler - Eingabefehler in Knotenadresse (UA), bitte aendern.
+Error6    = Fehler - Knotenadresse muss zwischen 0 and 255 liegen.
 
-FeedBackAdd     = Node added. Node Address =
-FeedBackDelete  = Node deleted. Node Address =
-FeedBackUpdate  = Node updated. Node Address =
+FeedBackAdd     = Knoten ergaenzt. Knotenadresse =
+FeedBackDelete  = Knoten geloescht. Knotenadresse =
+FeedBackUpdate  = Knoten aktualisiert. Knotenadresse =
 
-ConfirmDelete1  = Are you sure you want to delete this node?
-ConfirmDelete2  = Any Sensors, Turnouts, or Lights with this node address will be affected.
-ConfirmDeleteTitle = Confirm Deletion
-ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
-ConfirmUpdate3  = Are you sure you want to update this node?
-ConfirmUpdateTitle  = Confirm Update
+ConfirmDelete1  = Knoten wirklich loeschen?
+ConfirmDelete2  = Alle Detektoren, Weichen oder Signale mit dieser Kontenadresse sind betroffen.
+ConfirmDeleteTitle = Loeschen bestaetigen
+ConfirmUpdate2  = Detektoren, Weichen oder Signale mit dieser Kontenadresse koennen betroffen sein.
+ConfirmUpdate3  = Knoten wirklich aktualisieren?
+ConfirmUpdateTitle  = Aktualisierung bestaetigen
 
-Reminder1  = Remember to save your new node information.
-Reminder2  = Use the Save button in the Preferences window.
-ReminderTitle = Reminder
+Reminder1  = Speichern der neuen Knoteninformation nicht vergessen.
+Reminder2  = Speicherknopf im Fenster Voreinstellungen benutzen.
+ReminderTitle = Erinnerung
