--- a/help/en/README
+++ b/help/en/README
@@ -10,3 +10,7 @@ lives in the directory above this.  The .cvsignore file here
 has been set to ignore it, so that copies created automatically
 here don't cause confusion.
 
+There are several subtrees to this:
+  DecoderProManual - a help version of the original manual
+  html - a help-customized version of the web site
+  context - context-sensitive help, organized by Java package
