--- a/resources/icons/smallschematics/searchlights/README
+++ b/resources/icons/smallschematics/searchlights/README
@@ -1,5 +1,9 @@
-These icons were extracted from images on Carsten S. Lundsten's web site.
+These icons were extracted from images on Carsten S. Lundsten's web site,
+with updates by Dick Bronson.
+
 Please see http://www.lundsten.dk/us_signaling/abs_st_sp/index.html#example
+
+Your usage of these is subject to the licensing terms in the COPYING file.
 
 Images with names like "right-yellow-marker.gif" represent:
 
@@ -7,6 +11,10 @@ Images with names like "right-yellow-marker.gif" represent:
   "yellow" - the searchilight aspect is yellow (c.f. "red-green" for
                 red over green)
   "marker" - the mast has a marker plate, e.g. is a block signal
+  "held" - the signal is being held (red) by logic
+  "flashing" - the image represents a flashing signal on the layout
+  "short" - the image is for a dwarf or dual head signal
+  "white" - actually gray outline so it will show against black background panels
   
   
 
