German Translation Update August 9th, 2007

--- a/apps/ActionListBundle_de.properties
+++ b/apps/ActionListBundle_de.properties
@@ -1,6 +1,6 @@
 # ActionListBundle_de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the apps package including Action List of jmri.
 #
@@ -29,6 +29,8 @@ jmri.jmrit.beantable.SignalHeadTableAction =        Oeffne Signaltabelle
 jmri.jmrit.beantable.ReporterTableAction =          Oeffne Meldertabelle
 jmri.jmrit.beantable.MemoryTableAction =            Oeffne Speichertabelle
 jmri.jmrit.beantable.RouteTableAction =             Oeffne Weichenstrassentabelle
+jmri.jmrit.beantable.LightTableAction =				Oeffne Lichtersteuerungstabelle
+jmri.jmrit.beantable.LogixTableAction =				Oeffne Logiktabelle
 jmri.jmrit.blockboss.BlockBossAction =              Oeffne Signallogiktabelle
 
 jmri.jmrit.consisttool.ConsistToolAction =          Oeffne Mehrfachtraktionenwerkzeug
@@ -40,6 +42,9 @@ jmri.jmrit.simpleclock.SimpleClockAction = 			Oeffne Spieluhrkonfigurator
 # Panels menu
 jmri.jmrit.display.PanelEditorAction =              Neues Gleisstellbild
 jmri.configurexml.LoadXmlConfigAction =             Lade Gleisstellbild
+jmri.jmrit.automat.monitor.AutomatTableAction =     Oeffne Programmmonitor
+jmri.jmrit.jython.JythonWindow =                    Oeffne Scriptausgabefenster
+jmri.jmrit.jython.InputWindowAction =               Oeffne Scripteingabefenster
 
 # selected items from systems menus
 jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Oeffne C/MRI Monitor
