German Translation Update August 9th, 2007

--- a/jmri/jmrit/beantable/BeanTableBundle_de.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle_de.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle_de.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit.beantable GUI elements
 
@@ -8,6 +8,7 @@ TitleSensorTable = Detekotorentabelle
 TitleTurnoutTable = Weichentabelle
 TitleSignalTable = Signaltabelle
 TitleLightTable = Lichttabelle
+TitleLogixTable = Logiktabelle
 TitleReporterTable = Meldertabelle
 TitleMemoryTable = Speichertabelle
 
@@ -20,20 +21,25 @@ ButtonCancel    = Annulieren
 ButtonNo        = Nein
 ButtonYes       = Ja
 ButtonYesPlus   = Ja - Warnungen unterdruecken
+ButtonDelete    = Loeschen
+
+
 TitleAddSignal  = Hinzufuegen eines Signals
 TitleAddSensor  = Hinzufuegen eines Detektors
 TitleAddTurnout = Hinzufuegen einer Weiche
 TitleAddReporter = Hinzufuegen eines Melders
 TitleAddMemory = Hinzufuegen eines Speichers
 TitleAddLight = Hinzufuegen eines Lichts
-LabelSystemName = Systembezeichunung:
-LabelUserName   = Benutzerbezeichunung:
+
+ColumnHeadEnabled = Aktiviert
 
 StringSE8c4aspect  = SE8c Vierbegriffssignal
 StringTripleTurnout = Dreifachweiche
 StringDoubleTurnout = Doppelweiche
 StringVirtual = Virtuelle Weiche
 
+LabelSystemName = Systembezeichnung:
+LabelUserName   = Benutzerbezeichnung:
 LabelTurnoutNumber = Weichennummer:
 LabelGreenTurnoutNumber  = Gruene Weichennummer:
 LabelYellowTurnoutNumber = Gelbe Weichennummer:
@@ -60,6 +66,7 @@ LightTimedSensor = Einschaltdetektor name
 LightTimedSensorHint = Eingabe des Detektors fuer verzoegertes Einschalten
 LightTimedDurationOn = Einschaltdauer (msec)
 LightTimedDurationOnHint = Eingabe der Einschaltdauer in Millisekunden
+LightNoneSelected = Keine automatische Steuerung gewaehlt
 LightControlBorder = Lichtregelung
 LightCreateButtonHint = Druecke Erzeugen um ein neues Licht zu erzeugen
 LightEditButtonHint = Druecke Bearbeiten um ein bestehendes Licht zu bearbeiten
@@ -70,6 +77,7 @@ LightSensorControl = Nach Detektor
 LightFastClockControl = Nach Spieluhr
 LightTurnoutStatusControl = Nach Weichenposition
 LightTimedOnControl = Nach Einschaltzeit
+LightNoControl = Keine
 
 LightCreateInst = Zur Erzeugung eines Lichtes Adresse waehlen oder eingeben und "Erzeugen" Druecken.
 LightEditInst = Zur Bearbeitung Systenmane eingeben und "Bearbeiten" Druecken.
@@ -104,6 +112,10 @@ LightWarn9 = Warnung: Licht erzeugt, aber Zeiteingabe hat ungueltiges Zeitformat
 Reminder1 = Nicht vergessen die Konfiguration abzuspeichern. (Menu
 Reminder2 = 'Speichern Konfiguration' im Dokument Menu der Lichttabelle.)
 ReminderTitle = Erinnerung
+
+ReminderInUse = Es wir ebenfalls in  {1} anderen Objekten verwendet.
+DeletePrompt = Sind Sie sicher, dass Sie {0} loeschen wollen?
+
 WarningTitle = Warnung
 
 TurnoutWarn1 = Warnung - Angeforderte Weichenadresse 
