--- a/jmri/jmrit/display/DisplayBundle_de.properties
+++ b/jmri/jmrit/display/DisplayBundle_de.properties
@@ -1,15 +1,10 @@
 # DisplayBundle_de.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Simon Ginsburg
 # German properties for the jmrit.display package
 
-
-# menu items
-MenuPanels    = Gleisstellbild
-MenuItemNew   = Neues Gleisstellbild...
-MenuItemLoad  = Lade Gleisstellbild...
-MenuItemStore = Speichere Gleisstellbild...
+Title         = Gleisstellbild Editor
 
 # menu items
 MenuPanels    = Gleisstellbilder
@@ -28,15 +23,32 @@ MenuItemScriptInput = Ablaufprogramm Eingabe
 
 # labels, etc
 ButtonAddBkg        = Waehle Hintergrundbild...
-ButtonAddText       = Waehle Text:
-ButtonAddIcon       = Waehle Sinnbild:
-ButtonAddSensor     = Waehle Sensor:
-ButtonAddRHTurnout  = Waehle rechte Weiche:
-ButtonAddLHTurnout  = Waehle linke Weiche:
-ButtonAddSignal     = Waehle Signal:
-ButtonAddFastClock  = Waehle Spieluhr:
+ButtonSetName       = Setze Gleisstellbildname
+ButtonAddText       = Setze Text:
+ButtonAddIcon       = Setze Sinnbild:
+ButtonAddSensor     = Setze Sensor:
+ButtonAddRHTurnout  = Setze rechte Weiche:
+ButtonAddLHTurnout  = Setze linke Weiche:
+ButtonAddSignal     = Setze Signal:
+ButtonAddMemory     = Setze Speicher:
+ButtonAddReporter   = Setze Reporter:
+ButtonAddMultiSensor = Setze Mehrfachsensor...
+ButtonAddFastClock  = Setze Spieluhr:
+ButtonChangeIcon    = Aendere Sinnbild...
+
+PromptNewName       = Setze neuen Namen:
+
+LabelX              = x:
+LabelY              = y:
 
 CheckBoxEditable    = Gleisstellbildelementespezifische Menus aktiv
 CheckBoxPositionable = Gleisstellbildelemente sind verschiebbar
 CheckBoxControlling = Gleisstellbildelemente beeinflussen Anlage
 CheckBoxMenuBar     = Gleisstellbild hat Menu
+
+TitleChangeIcon     = Aendere Sinnbild
+TitleChangeIcons    = Aendere {0} Sinnbilder
+
+LabelSelectFile     =   Waehle neues Dokument und clicke auf zu aenderndes Sinnbild
+LabelEditor         = Editor
+LabelInputError     = Eingabefehler
