--- a/jmri/jmrix/JmrixSystemsBundle_de.properties
+++ b/jmri/jmrix/JmrixSystemsBundle_de.properties
@@ -1,6 +1,6 @@
 # JmrixSystemsBundle_de.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix Systems menu
 
@@ -23,7 +23,12 @@ MenuItemZimo = Zimo serial
 MenuItemDirect = DirectDrive
 MenuItemTMCC = TMCC (Lionel)
 MenuItemOakTree = Oak Tree
+MenuItemMRC = Model Rectifier Corp (MRC)
 
 MenuItemCommandMonitor = Befehlsmonitor
 MenuItemSendCommand = Sende Befehl
 MenuItemFirmwareUpdate = Firmware Aktualisierung
+MenuItemMacroCommand = Sende Skript
+MenuItemMacroEdit = Bearbeite Skript
+MenuItemTrackPacketMonitor = Gleispaket Monitor
+MenuItemClockMon = Monitor Uhr
