--- a/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle_de.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.loconet menu
 
@@ -22,4 +22,5 @@ MenuItemLocoBufferStats     = LocoBuffer Statistik Monitor
 MenuItemCmdStnConfig        = Zentraleinheitskonfigurator
 MenuItemDownload            = Firmware einspielen
 MenuItemSoundload           = Geraeusche einspielen
+MenuItemSoundEditor         = Bearbeite SPJ Geraeuschdokumente
 MenuItemSetID               = LocoNet ID einstellen
