--- a/jmri/jmrix/loconet/cmdstnconfig/DCS200options_de.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DCS200options_de.properties
@@ -1,6 +1,6 @@
 # DCS200options.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German command station options for the DCS200
 
@@ -21,6 +21,7 @@ Reserved = Reserviert
 
 HeadingText = Optionen zeigen Zustand wenn "G"eschlossen
 
+Option2 = 2: Verstaerkermodus, keine Zentraleinheitsfunktion
 Option3 = 3: Verstaerker mit Kehrschleifenautomatik
 Option5 = 5: Zentraleinheitenmodus
 Option9 = 9: Motorola Trinary Echo fuer 1-256 erlaubt
