--- a/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_de.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_de.properties
@@ -1,6 +1,6 @@
 # Defaultoptions.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German command station options for when the command
 # station isn't recognized.  These are the same as the Chief (DCS100)
@@ -22,6 +22,7 @@ Reserved = Reserviert
 
 HeadingText = Optionen zeigen Zustand wenn "G"eschlossen
 
+Option2 = 2: Verstaerkermodus, keine Zentraleinheitsfunktion
 Option3 = 3: Verstaerker mit Kehrschleifenautomatik
 Option5 = 5: Zentraleinheitenmodus
 Option9 = 9: Motorola Trinary Echo fuer 1-256 erlaubt
