--- a/jmri/jmrix/loconet/downloader/Loader_de.properties
+++ b/jmri/jmrix/loconet/downloader/Loader_de.properties
@@ -1,6 +1,6 @@
 # Loader_de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # Copyright 2005 Bob Jacobsen
 # Translation by Simon Ginsburg
 #
@@ -14,6 +14,7 @@ ButtonSelect = Waehle
 ButtonRead = Lese Dokument
 ButtonLoad = Runterladen
 ButtonVerify = Kontrollieren
+ButtonAbort = Abbrechen
 
 LabelInpFile = Eingangsdokumente: 
 
@@ -32,6 +33,7 @@ StatusReadFile      = Klicke auf "Lese Dokument" zum Einlesen
 StatusDoDownload    = Klicke auf "Runterladen" um Transfer zu aktivieren
 StatusDownloading   = Laedt runter!
 StatusVerifying     = Kontrolliert!
+StatusAbort         = Transfer abgebrochen
 StatusDone          = Transfer abgeschlossen
 
 TipReadDisabled = Knopf deaktiviert bis Eingangsdokument gewaehlt
@@ -42,6 +44,9 @@ TipLoadEnabled = Klicke hier zum runter laden
 
 TipVerifyDisabled = Knopf deaktiviert bis Eingangsdokument eingelesen
 TipVerifyEnabled = Klicke hier zum kontrollieren
+
+TipAbortDisabled = Knopf deaktiviert solange nicht heruntergeladen oder kontrolliert wurde
+TipAbortEnabled = Hier Druecken um einen Transfer oder eine Kontrolle abzubrechen
 
 TipDisabledDownload = Knopf deaktiviert bis Transfer abgeschlossen
 
