--- a/jmri/NamedBeanBundle_de.properties
+++ b/jmri/NamedBeanBundle_de.properties
@@ -1,11 +1,20 @@
 # NamedBeanBundle_de.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # by Simon Ginsburg
 # German properties decribing states of the various types of NamedBeans
 
 BeanStateInconsistent = Unstimmig
 BeanStateUnknown = Unbekannt
+
+BeanNameTurnout     = Weiche
+BeanNameSensor      = Sensor
+BeanNameSignalHead  = Signalmast
+BeanNameMemory      = Speicher
+BeanNameReporter    = Melder
+BeanNameLight       = Licht
+BeanNameLogix       = Logik
+BeanNameRoute       = Weichenstrasse
 
 LightStateOff = Aus
 LightStateOn = Ein
@@ -23,3 +32,4 @@ SignalHeadStateDark = Dunkel
 SignalHeadStateFlashingRed = Rot blinkend
 SignalHeadStateFlashingYellow = Gelb blinkend
 SignalHeadStateFlashingGreen = Gruen blinkend
+SIgnalHeadStateHeld = Gehalten
