--- a/jmri/jmrit/JmritToolsBundle_de.properties
+++ b/jmri/jmrit/JmritToolsBundle_de.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_de.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrit Tools menu
 
@@ -19,6 +19,8 @@ MenuItemReporterTable = Meldertabelle
 MenuItemMemoryTable = Speichertabelle
 MenuItemSimpleSignal = Einfache Signallogik
 MenuItemRouteTable = Weichenstrassentabelle
+MenuItemLogixTable = Logik
+MenuItemSensorGroup = Sensorgruppen...
 
 MenuThrottles = Handregler
 MenuItemNewThrottle = Neuer Handregler...
@@ -38,5 +40,8 @@ MenuItemNixieClock = Nixie Uhr
 MenuItemSetupClock = Einstellungen Spieluhr
 MenuItemAnalogClock = Analoguhr
 
+MenuProgrammers=Programmierwerkzeuge
+
+MenuTables=Tafeln
 
 
