--- a/jmri/jmrix/cmri/serial/assignment/ListBundle_de.properties
+++ b/jmri/jmrix/cmri/serial/assignment/ListBundle_de.properties
@@ -1,12 +1,13 @@
 # ListBundle_de.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.cmri.serial.assignment window
 
 WindowTitle			= Liste der C/MRI Zuweisungen
 
-NodePanelName		= Knoten:
+NodePanelName		= C/MRIKnoten:
+NodeBoxLabel		= Knoten:
 NodeBoxTip			= Waehle einen konfigurierten Knoten
 ShowInputButton		= Zeige Eingangsbits
 ShowInputTip		= Waehle diese Option zur Anzeige der Eingangsbits
