--- a/jmri/jmrix/lenz/XNetBundle_de.properties
+++ b/jmri/jmrix/lenz/XNetBundle_de.properties
@@ -1,6 +1,6 @@
 # XNetBundle_de.properties
 #
-# Revision $Revision: 2.2 $
+# Revision $Revision: 2.3 $
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.xpressnet menu
 
@@ -14,4 +14,8 @@ MenuItemLZ100ConfigurationManager  = LZ100 Konfigurator
 MenuItemLZV100ConfigurationManager  = LZV100 Konfigurator
 MenuItemLV102ConfigurationManager  = LV102 Konfigurator
 MenuItemXNetSystemInformation  = XPressNet System Informationen
+
+#Turnout Text
+TurnoutStateClosed = "Geradeaus (-)"
+TurnoutStateThrown = "Abzweigung (+)"
 
