--- a/jmri/jmrix/loconet/cmdstnconfig/DCS50options_de.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DCS50options_de.properties
@@ -1,6 +1,6 @@
 # DCS50options.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # by Simon Ginsburg
 # German command station options for the DCS50 (Zephyr)
 
@@ -22,7 +22,7 @@ Reserved = Reserviert
 HeadingText = Optionen zeigen Zustand wenn "G"eschlossen
 
 Option1 = 1: Ein (statt zwei) Regleranschluesse
-Option2 = 2: Booster/Throttle, not command station
+Option2 = 2: Verstaerkermodus, keine Zentraleinheitsfunktion
 Option3 = 3: Verstaerker mit Kehrschleifenautomatik
 Option5 = 5: Zentraleinheitenmodus
 Option6 = 6: Funktion 3 ist nicht selbsthaltend
