--- a/jmri/NamedBeanBundle_es.properties
+++ b/jmri/NamedBeanBundle_es.properties
@@ -1,6 +1,6 @@
 # NamedBeanBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties decribing states of the various types of NamedBeans
 #
@@ -9,6 +9,15 @@
 
 BeanStateInconsistent = Inconsistente
 BeanStateUnknown = Desconocido
+
+BeanNameTurnout     = Desv’o
+BeanNameSensor      = Sensor
+BeanNameSignalHead  = Cabeza de se–al
+BeanNameMemory      = Memoria
+BeanNameReporter    = Chivato
+BeanNameLight       = Luz
+BeanNameLogix       = Logix
+BeanNameRoute       = Ruta
 
 LightStateOff = Apagado
 LightStateOn = Encendido
@@ -26,3 +35,4 @@ SignalHeadStateDark = Apagado
 SignalHeadStateFlashingRed = Rojo intermitente
 SignalHeadStateFlashingYellow = Amarillo intermitente
 SignalHeadStateFlashingGreen = Verde intermitente
+SIgnalHeadStateHeld = Bloqueada
