--- a/jmri/jmrit/beantable/BeanTableBundle_es.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle_es.properties
@@ -1,16 +1,28 @@
 # BeanTableBundle_es.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 #
 # Translated by por Alfredo Sola <alfredos@users.sf.net> 20040518
 #
+# This file is part of JMRI.
+#
+# JMRI is free software; you can redistribute it and/or modify it under 
+# the terms of version 2 of the GNU General Public License as published 
+# by the Free Software Foundation. See the "COPYING" file for a copy
+# of this license.
+# 
+# JMRI is distributed in the hope that it will be useful, but WITHOUT 
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
+# for more details.
 
 TitleSensorTable  = Tabla de sensores
 TitleTurnoutTable = Tabla de desvíos
 TitleSignalTable  = Tabla de señales
 TitleLightTable = Tabla de luces
+TitleLogixTable = Tabla de Logix
 TitleReporterTable = Tabla de informes
 TitleMemoryTable = Tabla de memoria
 
@@ -23,23 +35,32 @@ ButtonCancel    = Cancelar
 ButtonNo        = No
 ButtonYes       = Si
 ButtonYesPlus   = Si - dejar de avisar
+
 TitleAddSignal  = Añadir señal
 TitleAddSensor  = Añadir sensor
 TitleAddTurnout = Añadir desvío
 TitleAddReporter = Añadir informe
 TitleAddMemory = Añadir memoria
 TitleAddLight = Añadir/editar luz
-LabelSystemName = Nombre del sistema:
-LabelUserName   = Nombre de usuario:
+
+ColumnHeadEnabled = Habilitado
 
 StringSE8c4aspect  = SE8c 4 aspectos
 StringTripleTurnout = Desvío triple
 StringDoubleTurnout = Desvío doble
+StringVirtual = Virtual
+StringLsDec = LDT LS-DEC
 
+LabelSystemName = Nombre del sistema:
+LabelUserName   = Nombre de usuario:
 LabelTurnoutNumber = Número de desvío:
 LabelGreenTurnoutNumber  = Número de desvío verde:
 LabelYellowTurnoutNumber = Número de desvío amarillo:
 LabelRedTurnoutNumber    = Número de desvío rojo:
+LabelFlashGreenTurnoutNumber  = Número de desvío verde intermitente:
+LabelFlashYellowTurnoutNumber = Número de desvío amarillo intermitente:
+LabelFlashRedTurnoutNumber    = Número de desvío rojo intermitente:
+LabelDarkTurnoutNumber    = Número de desvío apagado:
 
 LightSystemName = Nombre de sistema de la luz
 LightSystemNameHint = Introduzca nombre de sistema para la luz nueva, p.e. CL1B13
@@ -58,6 +79,11 @@ LightTurnout = Nombre de desvío
 LightTurnoutHint = Introduzca nombre del desvío cuyo estado indica la luz nueva
 LightTurnoutSense = Estado para ENCENDIDA
 LightTurnoutSenseHint = Elija estado del devío que corresponde a ENCENDIDA
+LightTimedSensor = Nombre de sensor que dispara
+LightTimedSensorHint = Ponga el nombre del sensor que dispara el encendido temporizado
+LightTimedDurationOn = Duración del encendido (ms)
+LightTimedDurationOnHint = Ponga la duración del encendido temporizado en milisegundos
+LightNoneSelected = No está seleccionado ningún control automático
 LightControlBorder = Control de luz
 LightCreateButtonHint = Pulse Crear para crear una luz
 LightEditButtonHint = Pulse Editar para datos de una luz existente
@@ -67,6 +93,8 @@ LightCancelButtonHint = Pulse Cancelar para dejar la luz sin cambiar
 LightSensorControl = Por sensor
 LightFastClockControl = Por reloj rápido
 LightTurnoutStatusControl = Por estado de desvío
+LightTimedOnControl = Encendido temporizado
+LightNoControl = Ninguno
 
 LightCreateInst = Para crear una luz nueva, seleccione o introduzca los datos y pulse Crear
 LightEditInst = Para editar, introduzca nombre y pulse Editar para presentar los datos actuales
@@ -94,13 +122,19 @@ LightWarn3 = El desvío pedido tiene la misma dirección que la luz:
 LightWarn4 = Atención: La nueva luz tiene como dirección una ya usada por
 LightWarn5 = Atención - la luz pedida 
 LightWarn6 = tiene la misma dirección que el desvío
-LightWarn7 = ?Seguro que quiere añadir esta luz?
+LightWarn7 = ¿Seguro que quiere añadir esta luz?
+LightWarn8 = Atención: Se ha creado la luz, pero el sensor que la dispara no tiene un nombre válido.
+LightWarn9 = Atención: Se ha creado la luz, pero la duración no tiene un formato válido.
 
 Reminder1 = Recuerde guardar las luces al disco (pulse en
 Reminder2 = 'Guardar configuración...' en el menú Archivo de la tabla de luces)
 ReminderTitle = Recuerde
+
+ReminderInUse = Están usándolo {1} otros objetos.
+DeletePrompt = ¿Seguro que desea borrar {0}?
+
 WarningTitle = Atención
 
 TurnoutWarn1 = Atención - El desvío pedido 
 TurnoutWarn2 = tiene la misma dirección que la luz
-TurnoutWarn3 = ?Seguro que quiere añadir este desvío?
+TurnoutWarn3 = ¿Seguro que quiere añadir este desvío?
