--- a/jmri/jmrit/JmritToolsBundle_es.properties
+++ b/jmri/jmrit/JmritToolsBundle_es.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle_es.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default properties for the jmri.jmrit Tools menu
 #
@@ -14,14 +14,16 @@ MenuItemDecoderProServiceProgrammer = Programador en servicio DecoderPro
 MenuItemDecoderProOpsModeProgrammer = Programador en modo operaciones DecoderPro
 
 MenuItemTurnoutControl = Control de desvíos
-MenuItemTurnoutTable = Tabla de desvíos
-MenuItemSensorTable = Tabla de sensores
-MenuItemLightTable = Tabla de luces
-MenuItemSignalTable = Tabla de señales
-MenuItemReporterTable = Tabla de informes
-MenuItemMemoryTable = Tabla de memoria
+MenuItemTurnoutTable = Desvíos
+MenuItemSensorTable = Sensores
+MenuItemLightTable = Luces
+MenuItemSignalTable = Señales
+MenuItemReporterTable = Chivatos
+MenuItemMemoryTable = Variables de memoria
 MenuItemSimpleSignal = Lógica de señales
 MenuItemRouteTable = Tabla de rutas
+MenuItemLogixTable = Logix
+MenuItemSensorGroup = Grupos de sensores...
 
 MenuThrottles = Mandos
 MenuItemNewThrottle = Mando nuevo...
@@ -39,3 +41,9 @@ MenuItemSendDCCPacket = Enviar paquete DCC
 MenuClocks = Relojes
 MenuItemNixieClock = Reloj Nixie
 MenuItemSetupClock = Configurar reloj a escala...
+MenuItemAnalogClock = Reloj analógico
+
+
+MenuProgrammers=Programadores
+
+MenuTables=Tablas
