--- a/jmri/jmrit/JmritDebugBundle_es.properties
+++ b/jmri/jmrit/JmritDebugBundle_es.properties
@@ -1,6 +1,6 @@
 # JmritDebugBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit Debug menu
 #
@@ -13,6 +13,11 @@ MenuItemMemoryUsageMonitor      = Monitor de uso de memoria
 MenuItemRecreateDecoderIndex    = Recrear índice de decodificadores
 MenuItemRecreateRoster          = Recrear índice del depósito
 MenuItemCheckXMLFile            = Comprobar fichero XML
+MenuItemValidateXMLFile         = Validar fichero XML
 MenuItemCheckDecoderNames       = Comprobar nombres de decodificador
 MenuItemCheckProgrammerNames    = Comprobar nombres de programador
+MenuItemLogAction               = Guardar mensaje
+MenuItemLogixDisabled			= Deshabilitado cargar Logixs
 
+LogixDisabledMessage = Como se ha pedido, cuando los Logix se cargan usando el menú Paneles, estarán todos deshabilitados.
+DebugOption                    = Opción de depuración
