--- a/jmri/jmrit/roster/JmritRosterBundle_es.properties
+++ b/jmri/jmrit/roster/JmritRosterBundle_es.properties
@@ -1,15 +1,16 @@
 # JmritRosterBundle_es.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
 # Translated by Alfredo Sola <alfredos@users.sf.net> 20040826
 #
 
-MenuItemImport  = Importar ...
-MenuItemExport  = Exportar ...
-MenuItemCopy    = Copiar  ...
-MenuItemDelete  = Borrar ...
+MenuItemImport  = Importar entrada...
+MenuItemExport  = Exportar entrada ...
+MenuItemCopy    = Copiar entrada ...
+MenuItemDelete  = Borrar entrada ...
 MenuItemPrint   = Imprimir resumen ...
+MenuItemPreview = Vista previa de resumen ...
 
 FieldID             = ID:
 FieldRoadName       = Nombre:
