--- a/jmri/jmrix/cmri/CMRIBundle_es.properties
+++ b/jmri/jmrix/cmri/CMRIBundle_es.properties
@@ -1,6 +1,6 @@
 # CMRIBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrix.cmri menu
 #
@@ -12,3 +12,4 @@ MenuCMRI    = CMRI
 MenuItemCommandMonitor      = Monitor de CMRI
 MenuItemSendCommand         = Enviar comando
 MenuItemDiagnostics         = Diagnosticar
+MenuItemAssignments         = Listar asignaciones
