Updates and initial version of DB150

--- a/jmri/jmrix/JmrixSystemsBundle_es.properties
+++ b/jmri/jmrix/JmrixSystemsBundle_es.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle_es.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrix Systems menu
 #
@@ -24,6 +24,15 @@ MenuItemXPressNet = XPressNet
 MenuItemXPA = XPA
 MenuItemZimo = Zimo
 MenuItemDirect = DirectDrive
+MenuItemTMCC = TMCC (Lionel)
+MenuItemOakTree = Oak Tree
+MenuItemMRC = Model Rectifier Corp (MRC)
 
 MenuItemCommandMonitor = Monitor de comandos
 MenuItemSendCommand = Enviar comando
+MenuItemFirmwareUpdate = Actualizar firmware
+MenuItemMacroCommand = Enviar macro
+MenuItemMacroEdit = Editar Macro
+MenuItemConsistEdit = Editar mando mœltiple
+MenuItemTrackPacketMonitor = Monitor de paquetes en v’a
+MenuItemClockMon = Monitor de reloj
