--- a/jmri/jmrix/lenz/XNetBundle_es.properties
+++ b/jmri/jmrix/lenz/XNetBundle_es.properties
@@ -1,6 +1,6 @@
 # XNetBundle_es.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default properties for the jmri.jmrix.xpressnet menu
 #
@@ -17,3 +17,6 @@ MenuItemLZV100ConfigurationManager  = Gestor de configuración del LZV100
 MenuItemLV102ConfigurationManager  = Gestor de configuración del LV102
 MenuItemXNetSystemInformation  = Información del sistema XPressNet
 
+#Turnout Text
+TurnoutStateClosed = "Directo (-)"
+TurnoutStateThrown = "Desviado (+)"
