--- a/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_es.properties
+++ b/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_es.properties
@@ -1,6 +1,6 @@
 # NodeConfigBundle_es.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrix.cmri.serial.nodeconfig window
 #
@@ -15,10 +15,13 @@ LabelCardSize       = Tamaño de tarjeta:
 LabelNodeAddress    = Dirección de nodo (UA):
 LabelNodeType       = Tipo de nodo:
 LabelDelay          = Retardo (DL):
+LabelPulseWidth     = Ancho de pulso:
+LabelMilliseconds   = (milisegundos)
 
 TipNodeAddress      = Introduzca dirección del nodo, numerando desde 0.
 TipNodeType         = Elija el tipo de nodo C/MRI.
 TipDelay            = Retardo entre bytes recibidos (unidades de 10 microsegundos), normalmente 0.
+TipPulseWidth       = Anchura del pulso para control de desvíos pulsado (permitido de 100 a 10000).
 TipCardSize         = Elija número de bits por tarjeta.
 TipAddButton        = Añadir un nodo nuevo
 TipEditButton       = Editar un nodo existente
@@ -71,7 +74,8 @@ HintSearchlightPartD = No hace falta nada si
 HintSearchlightPartE = no es una señal de
 HintSearchlightPartF = dos hilos intermit.
 
-# All Errorxx lines below must be shorter than the longest NotesStdx line above.Error1    = Error - El nodo con dirección '
+# All Errorxx lines below must be shorter than the longest NotesStdx line above.
+Error1    = Error - El nodo con dirección '
 Error2    = ' ya existe, intente con otra.
 Error3    = Error al crear el nodo. No se ha añadido.
 Error4    = Error - no hay nodos con esa dirección (UA), intente de nuevo.
@@ -86,6 +90,9 @@ Error12   = Esto es un requisito de diseño de C/MRI.
 Error13   = Error - USIC_SUSIC debe tener al menos una tarjeta de E/S.
 Error14   = Por favor, configure tarjetas de entrada y salida.
 Error15   = Error - las tarjetas USIC_SUSIC deben ser de 24 o 32 bits.
+Error16   = Error - El ancho del pulso debe ser al menos 100, por favor vuelva a intentarlo.
+Error17   = Error - El ancho del pulso debe ser menos de 10000, por favor vuelva a intentarlo.
+Error18   = Error - Caracter extraño en ancho de pulso, por favor vuelva a intentarlo.
 
 FeedBackAdd     = Añadido nodo C/MRI. Dirección =
 FeedBackDelete  = Borrado nodo C/MRI. Dirección =
