--- a/help/en/README
+++ b/help/en/README
@@ -8,6 +8,9 @@ There are several content subtrees:
   html - a help-customized version of the web site
   package - package-sensitive help, organized by Java package
   
+The TemplatePlain.shtml and TemplateBar.shtml files are basic templates
+to copy when making a new file.
+
 For more information on maintaining the various metadata in the 
 help system, please see:
 <http://jmri.sourceforge.net/doc/Technical/Help.shtml>
@@ -26,4 +29,3 @@ The build.xml and format.xsl files are used to create the webtoc.html
 and webindex.html files automatically. Those use Server-Side Includes
 to display the standard JMRI header and footer, and also some 
 explanatory content from the tocheader and indexheader files.
-
