--- a/lib/README
+++ b/lib/README
@@ -14,7 +14,7 @@ javacsv.jar
  from <http://javacsv.sourceforge.net/>
 
 jhall.jar
- version 2.0
+ version 2.03
  
 log4j.jar
  version 1.1.3
@@ -41,4 +41,5 @@ junit.jar
  version 3.8.2
  from <junit.org>
 
+Older:
 JMRI 1.9/2.0 had the jakarta-regexp-1.5.jar present in this directory
